--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests
-pynput
-pyperclip
-pyautogui
-pywebview
+requests==2.31.0
+pynput==1.7.6
+pyperclip==1.8.2
+pyautogui==0.9.54
+pywebview==4.4.1
