--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-requests==2.32.4
-pynput==1.7.6
-pyperclip==1.8.2
-pyautogui==0.9.54
-pywebview==4.4.1
+# Core dependencies for Medical Automation Suite
+Flask>=2.3.0,<3.0.0
+flask-cors>=4.0.0,<5.0.0
+requests>=2.31.0,<3.0.0
+pynput>=1.7.6,<2.0.0
+pyperclip>=1.8.2,<2.0.0
+pyautogui>=0.9.54,<1.0.0
+pywebview>=4.0.0,<5.0.0
+python-dotenv>=1.0.0,<2.0.0
